ops/terraform/security.tf
###########################
# ALLOW SSH
###########################

resource "aws_security_group" "allow_ssh" {
  name = "allow ssh"

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  lifecycle {
    create_before_destroy = true
  }
}

###########################
# ALLOW HTTP
###########################

resource "aws_security_group" "allow_http" {
  name = "allow http"

  egress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  lifecycle {
    create_before_destroy = true
  }
}
